--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             learning new things in each.<br> I love working on projects where I get to collaborate with people with varied specialties and personalities and I work well in a team. 
             The Internet of Things, Cyber-Physical Systems, and Machine learning are my fields of interest. 
         </p>
+        <br>
+        <center>
+            <a href="page2.html" target="_blank">View Hobbies</a>
+            <a href="page3.html" target="_blank">View Skills</a>
+        </center>
     </section>
     <section class="section-3">
         <h1>
